{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 598,
  "lineage": "0b7ebd08-9925-3b35-aced-d275b2a148da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route_to_internet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-06a475cc92c40667c",
            "id": "rtb-06a475cc92c40667c",
            "owner_id": "414402433373",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03101525e51a6eccc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0eae00819fe7d2fbe"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03101525e51a6eccc",
            "owner_id": "414402433373",
            "vpc_id": "vpc-0eae00819fe7d2fbe"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example-alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414402433373:loadbalancer/app/example-alb/3826659dd301671a",
            "arn_suffix": "app/example-alb/3826659dd301671a",
            "dns_name": "example-alb-300901653.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:414402433373:loadbalancer/app/example-alb/3826659dd301671a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example-alb",
            "security_groups": [
              "sg-07f2d4d09bacbec04"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ca0f97a80d3d4b73"
              },
              {
                "subnet_id": "subnet-0e53b6e441da678d8"
              }
            ],
            "subnets": [
              "subnet-0ca0f97a80d3d4b73",
              "subnet-0e53b6e441da678d8"
            ],
            "vpc_id": "vpc-0eae00819fe7d2fbe",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.http",
            "aws_subnet.example_subnet_1",
            "aws_subnet.example_subnet_2",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414402433373:listener/app/example-alb/3826659dd301671a/f2ab007a8e298452",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:414402433373:targetgroup/example-tg/e2e21dae5daad197",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414402433373:listener/app/example-alb/3826659dd301671a/f2ab007a8e298452",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:414402433373:loadbalancer/app/example-alb/3826659dd301671a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.example-alb",
            "aws_lb_target_group.example-tg",
            "aws_security_group.http",
            "aws_subnet.example_subnet_1",
            "aws_subnet.example_subnet_2",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "example-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414402433373:targetgroup/example-tg/e2e21dae5daad197",
            "arn_suffix": "targetgroup/example-tg/e2e21dae5daad197",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414402433373:targetgroup/example-tg/e2e21dae5daad197",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "example-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0eae00819fe7d2fbe"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414402433373:security-group/sg-07f2d4d09bacbec04",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f2d4d09bacbec04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http",
            "name_prefix": null,
            "owner_id": "414402433373",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0eae00819fe7d2fbe"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414402433373:subnet/subnet-0e53b6e441da678d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e53b6e441da678d8",
            "map_public_ip_on_launch": false,
            "owner_id": "414402433373",
            "vpc_id": "vpc-0eae00819fe7d2fbe"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414402433373:subnet/subnet-0ca0f97a80d3d4b73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ca0f97a80d3d4b73",
            "map_public_ip_on_launch": false,
            "owner_id": "414402433373",
            "vpc_id": "vpc-0eae00819fe7d2fbe"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414402433373:vpc/vpc-0eae00819fe7d2fbe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08241d81732c39ef5",
            "default_route_table_id": "rtb-06a475cc92c40667c",
            "default_security_group_id": "sg-03ebd65ce216459bf",
            "dhcp_options_id": "dopt-72ec190b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0eae00819fe7d2fbe",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06a475cc92c40667c",
            "owner_id": "414402433373"
          }
        }
      ]
    }
  ]
}